# ashlar

./: CMakeLists.txt  README.md
include/ashlar/: eigen_stl_vector_specialization.h  properties.h  stone.h  variational_shape_approximation.h
include/fourcolor/: four_color.h
src/: four_color.cpp  main.cpp  stone.cpp  variational_shape_approximation.cpp
